--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Applying CSS Style Sheet</title>
-    <link rel="stylesheet" type="text/css" href="Index.css" />
-  </head>
 
-  <body>
-    <h1 class="h1">Hello! My dear</h1>
-   <div class="Spinner">
-       
-   </div>
+<head>
+  <title>Applying CSS Style Sheet</title>
+  <link rel="stylesheet" type="text/css" href="Index.css" />
+</head>
 
-    </border>
-  </body>
+<body>
+  <h1 class="h1">Hello! My dear</h1>
+  <div class="Spinner">
+  </div>
+  </border>
+  <!-- Program 1 -->
+</body>
+
 </html>
